# MinecraftConsoles

./: .clangd  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  COMPILE.md  README.md  build-3ds.bat  clean-3ds.bat  configure-3ds.bat
.github/workflows/: nightly.yml  pull-request.yml
Minecraft.Client/: AbstractTexturePack.cpp  ArchiveFile.cpp  CMakeLists.txt  Camera.cpp  ClientConnection.cpp  LocalPlayer.cpp  MinecraftServer.cpp  MultiPlayerChunkCache.cpp  SelectWorldScreen.cpp  ServerChunkCache.cpp  StatsCounter.cpp  stdafx.h
Minecraft.Client/3DS/: 3DS_App.h  3DS_RuntimeStubs.cpp  3DS_UIController.h
Minecraft.Client/3DS/4JLibs/: 3DS_4JLibs_IMPLEMENTATION.md  4J_Input_Impl.cpp  4J_Profile_Impl.cpp  4J_Render_Impl.cpp  4J_Storage_Impl.cpp
Minecraft.Client/3DS/Sentient/: DynamicConfigurations.h
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h  PostProcesser.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp
Minecraft.Client/Common/DLC/: DLCSkinFile.cpp
Minecraft.Client/Common/GameRules/: GameRuleManager.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_PauseMenu.cpp  UIControl_Base.cpp  UIControl_EnchantmentButton.cpp  UIController.cpp  UIScene_AbstractContainerMenu.cpp  UIScene_BeaconMenu.cpp  UIScene_CraftingMenu.cpp  UIScene_CreativeMenu.cpp  UIScene_Credits.h  UIScene_DebugOverlay.cpp  UIScene_EnchantingMenu.cpp  UIScene_HUD.cpp  UIScene_Intro.cpp  UIScene_LeaderboardsMenu.cpp  UIScene_LoadOrJoinMenu.cpp  UIScene_SkinSelectMenu.cpp  UIScene_TradingMenu.cpp
Minecraft.Client/Windows64/: Windows64_UIController.cpp
Minecraft.Client/cmake/sources/: 3DS.cmake  Common.cmake
Minecraft.World/: AddEntityPacket.cpp  AnimatePacket.cpp  BasicTypeContainers.cpp  BasicTypeContainers.h  ChestTile.cpp  ClientCommandPacket.cpp  CompoundTag.h  ContainerOpenPacket.cpp  DirectoryLevelStorage.cpp  EntityEventPacket.cpp  FileHeader.h  GameEventPacket.cpp  Hasher.cpp  Item.cpp  Level.cpp  ListTag.h  MobEffectInstance.cpp  Player.cpp  PotionBrewing.cpp  Recipes.cpp  RemoveEntitiesPacket.cpp  SetEntityLinkPacket.cpp  SharedConstants.cpp  Tag.cpp  Tile.cpp  TileEditorOpenPacket.cpp  TileEntityDataPacket.cpp  stdafx.h
Minecraft.World/x64headers/: extraX64.h  xsocialpost.h
cmake/: CopyAssets.cmake
cmake/3ds/: main.cpp
cmake/toolchains/: 3ds.cmake
include/Common/: Compat3DS.h
include/lce_filesystem/: lce_filesystem.cpp
